# sw_mc_builder

./: .coveragerc  README.md  pyproject.toml  requirements.txt  sw_mc_builder.spec  testfile.py
.github/workflows/: pylint.yml  python-publish.yaml  test.yml
examples/: complex.py  composite_write.py  engine_controller.py
sw_mc_builder/: __init__.py  __main__.py  _handling_arguments.py  _utils.py  component_wrapper.py  components.py  handling.py  microcontroller.py  optimizer.py  pseudo_components.py  script_handling.py  util.py  wire.py
test/: test_works.py
